--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ BREVO_SENDER_NAME=Dekorama Web
 
 # URL pública del sitio (para sitemap.xml y robots.txt)
 NEXT_PUBLIC_SITE_URL=https://www.dekorama.es
+
+# Google Tag Manager (opcional; por defecto GTM-5HRSQRQK)
+# NEXT_PUBLIC_GTM_ID=GTM-5HRSQRQK
