--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ BREVO_SENDER_NAME=Dekorama Web
 # URL pública del sitio (para sitemap.xml y robots.txt)
 NEXT_PUBLIC_SITE_URL=https://www.dekoramagroup.com
 NEXT_PUBLIC_GTM_ID=GTM-5HRSQRQK
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XDYCVSTQZG
