--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ NEXT_PUBLIC_SITE_URL=https://www.dekorama.es
 
 # Google Tag Manager (opcional; por defecto GTM-5HRSQRQK)
 # NEXT_PUBLIC_GTM_ID=GTM-5HRSQRQK
+
+# Google Analytics GA4 (opcional; por defecto G-XDYCVSTQZG)
+# NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XDYCVSTQZG
